Updated text and correct presentation file for carbon chapter

--- a/training/spadesCBMDemo.qmd
+++ b/training/spadesCBMDemo.qmd
@@ -86,6 +86,44 @@ In this example, we will setup the workflow using `setupProject` from the
 [`SpaDES.project`](https://spades-project.predictiveecology.org/) package and
 current versions of the spadesCBM modules.
 
+::: {.callout-important}
+## Google account needed for this example
+
+Like the LandR example, you will need to access some of the data using the `googledrive` R package (part of the `tidyverse` family). During the `simInit()` (or `simInitAndSpades()`) call R will prompt you to either choose a previously authenticated account (if you have previously used `googledrive`) or to open a browser window and authenticate. If this doesn't work, try this workaround:
+
+```{r setupGoogle}
+#| eval: false
+#| results: hide
+#| code-fold: false
+#| code-summary: "Show code"
+install.packages(c("googledrive", "httpuv"), repos = repos)
+
+googledriveAuthPath <- "~/SpaDES_book/googledrive_auth_cache"
+dir.create(googledriveAuthPath, showWarnings = FALSE)
+googledrive::drive_auth(cache = "~/SpaDES_book/googledrive_auth_cache")
+
+```
+
+Make sure you give `tidyverse` read/write access to your files:
+
+![](assets/img/gdriveauth.png){fig-align="center" width="467"}
+:::
+
+::: {.callout-important}
+## Python is required for this example
+
+The *CBM_core* module requires Python >=3.9 and <=3.12.7.
+
+If a suitable version of Python does not already exist on your computer,
+`setupProject` will use the [`reticulate`](https://rstudio.github.io/reticulate/) package to install it using the [pyenv](https://github.com/pyenv/pyenv) or [pyenv-win](https://github.com/pyenv-win/pyenv-win) project.
+
+If you are using a Windows computer with Git installed, the `pyenv-win` tool will be acquired and managed directly by `reticulate`. If you are using a Windows computer without Git installed, you will be prompted to allow the `pyenv-win` tool to be downloaded directly from Github to your local user application data directory (`tools::R_user_dir("r-spadesCBM")`).
+
+If the Python installation process fails or you would prefer to manually install Python, it can be downloaded directly from [python.org/downloads](https://python.org/downloads).
+
+:::
+
+
 ``` {r}        
 projectPath <- "~/spadesCBMpython"
 dir.create(projectPath, recursive = TRUE, showWarnings = FALSE)
@@ -132,10 +170,31 @@ out <- SpaDES.project::setupProject(
       .useCache = TRUE
     )
   ),
+  functions = file.path(paths$modulePath, "CBM_core", "R", "ReticulateFindPython.R"),
 
   ret = {
-    reticulate::use_virtualenv(virtualenv = "r-reticulate")
-    reticulate::py_install("libcbm", envname = "r-reticulate")
+    reticulate::virtualenv_create(
+      "r-spadesCBM",
+      python = if (!reticulate::virtualenv_exists("r-spadesCBM")){
+        ReticulateFindPython(
+          version        = ">=3.9,<=3.12.7",
+          versionInstall = "3.10:latest",
+          pyenvRoot      = tools::R_user_dir("r-spadesCBM")
+        )
+      },
+      packages = c(
+        "numpy<2",
+        "pandas>=1.1.5",
+        "scipy",
+        "numexpr>=2.8.7",
+        "numba",
+        "pyyaml",
+        "mock",
+        "openpyxl",
+        "libcbm"
+      )
+    )
+    reticulate::use_virtualenv("r-spadesCBM")
   },
 
   #### begin manually passed inputs #########################################
@@ -169,43 +228,6 @@ out$loadOrder <- unlist(out$modules)
 
 ```
 
-::: {.callout-important}
-## Google account needed for this example
-
-Like the LandR example, you will need to access some of the data using the `googledrive` R package (part of the `tidyverse` family). During the `simInit()` (or `simInitAndSpades()`) call R will prompt you to either choose a previously authenticated account (if you have previously used `googledrive`) or to open a browser window and authenticate. If this doesn't work, try this workaround:
-
-```{r setupGoogle}
-#| eval: false
-#| results: hide
-#| code-fold: false
-#| code-summary: "Show code"
-install.packages(c("googledrive", "httpuv"), repos = repos)
-
-googledriveAuthPath <- "~/SpaDES_book/googledrive_auth_cache"
-dir.create(googledriveAuthPath, showWarnings = FALSE)
-googledrive::drive_auth(cache = "~/SpaDES_book/googledrive_auth_cache")
-
-```
-
-Make sure you give `tidyverse` read/write access to your files:
-
-![](assets/img/gdriveauth.png){fig-align="center" width="467"}
-:::
-
-::: {.callout-important}
-## Python is required for this example
-
-The *CBM_core* module requires Python >=3.9 and <=3.12.7.
-
-If a suitable version of Python does not already exist on your computer,
-`setupProject` will use the [`reticulate`](https://rstudio.github.io/reticulate/) package to install it using the [pyenv](https://github.com/pyenv/pyenv) or [pyenv-win](https://github.com/pyenv-win/pyenv-win) project.
-
-If you are using a Windows computer with Git installed, the `pyenv-win` tool will be acquired and managed directly by `reticulate`. If you are using a Windows computer without Git installed, you will be prompted to allow the `pyenv-win` tool to be downloaded directly from Github to your local user application data directory (`tools::R_user_dir("r-spadesCBM")`).
-
-If the Python installation process fails or you would prefer to manually install Python, it can be downloaded directly from [python.org/downloads](https://python.org/downloads).
-
-:::
-
 ## Run Simulation
 
 Now that our project is set up, we can run our simulation.
@@ -215,8 +237,10 @@ simPython <- do.call(SpaDES.core::simInitAndSpades, out)
 ```
 
 ## Looking at results
+
 ### Outputs
-In our `setupProject()` call, we defined certain outputs to be saved. You can see a list of these outputs your simulation has created, their name, and where they were saved by using the `outputs()` function like so:
+
+In our `setupProject()` call, we defined certain outputs to be saved by specifying `out$outputs`. Look at that table. It defines what is saved in the *output* folder. You can also see a list of these outputs your simulation has created, their name, and where they were saved by using the `outputs()` function like so:
 ```{r} 
 > outputs(simPython)
 
@@ -230,9 +254,10 @@ In our `setupProject()` call, we defined certain outputs to be saved. You can se
 
 ```
 
-In our simulation, as defined in `setupProject()`, we have `cbmPools.rds` and `NPP.rds` files for each simulation year. These files will be found in the `outputs` folder created in the project directory defined in our setup. 
+In our simulation, as defined in `setupProject()` with `out$outputs`, we have `cbmPools.rds` and `NPP.rds` files for each simulation year. These files are in the `outputs` folder created in the project directory defined in our setup. You can look at the these if you would like to explore results.
 
 ### Plotting
+
 We can also visualize some results using some plotting functions sourced from our modules. 
 
 ``` {r}        
@@ -259,7 +284,7 @@ spatialPlot(
 
 ```
 
-You can also schedule these plots within a module so that they are automatically generated at the end of the simulation. In the `CBM_core.R` module, you can find these plots already defined in the `doEvent.CBM_core()` function.  
+You can also schedule these plots in your simulation. To do that a `plot` event has to be scheduled within a module. We want the plots to be automatically generated at the end of the simulation. In the `CBM_core.R` module, we already have a `plot` event defined in the `doEvent.CBM_core()` function.  
 
 ```{r}
 plot = {
@@ -287,42 +312,40 @@ plot = {
         masterRaster = sim$masterRaster,
         spatialDT = sim$spatialDT
       )
-    },
+    }
 ```
 
-If you look a few lines above where the plots are defined in the module (on line 186) you will find a line of code currently commented out. If this line was being read, this would schedule the plotting event at the very end of the simulation (i.e. `eventPriority = 12`). 
+Even though the `event` (plot) exists, we had not scheduled this event in the simulation you just ran. If you look a few lines above where the plots are defined in the module (on line 186 in the `CBM_core.R` module), you will find a line of code currently commented out. If this line was being read, this would schedule the plotting event at the very end of the simulation (i.e., `eventPriority = 12`). 
 
 ``` {r}        
 # sim <- scheduleEvent(sim, end(sim), "CBM_core", "plot",  eventPriority = 12)
 ```
 
-You can remove the comment # to add this line of code back in, save, and rerun your simulation. The plotting is now a scheduled event in this module. The model should now automatically run the plotting functions above.
+You can remove the comment # to add this line of code back in, save `CBM_core.R`, and rerun your simulation. The plotting is now a scheduled event in this module. The model will now automatically run the plotting functions above.
 
 ## Changing the length of the simulation
-We currently are only running our simulation for 3 years, from 1998 to 2000. You can confirm that our simulation ends in 2000 like so:
+
+We currently are running our simulation for 3 years, from 1998 to 2000. This is defined in the script provided in the *Setup* section above by `times <- list(start = 1998, end = 2000)`. You can explore the time steps, start and end times, and units in this simulation like so:
 ```{r}
-> time(simPython)
-[1] 2000
-attr(,"unit")
-[1] "year"
+times(simPython)
 
 ```
 
-However, we have access to disturbance rasters until 2011. We can easily change the length of our simulation to a later year as long as we have the matching disturbance raster. If we wanted to extend our simulation to 2002 we could do so like this:
+To change the length of the simulation, we have to make sure we have the required inputs. If we keep the same study area, with the same growth information, and inventory information, we only need disturbance information for each year to extend the simulations. We have access to disturbance rasters from 1985 to 2011 via the `out$disturbanceRasters` in our *Setup* section above. We can change the length of our simulation to a later year, and even resume our simulations where we left off. Here, we set the last year of the simulation to 2002:
+
 ```{r}
 end(simPython) <- 2002
 ```
 
-We can then extend `simPython` to 2002 and create `simPython2`
+And now we resume the simulation using `simPython` to 2002, and create a new `simList`, `simPython2`.
+
 ```{r}
 simPython2 <- spades(simPython)
 ```
 
-With `simPython2`, you can look at your results and generate plots in the same way as we did with the 3 year simulation `simPython` earlier. 
+With `simPython2`, you can look at your results and generate plots in the same way as we did with the three year simulation `simPython` earlier. 
 
-## Changing study area
 
-Changing study areas requires that all the inputs be available. In spadesCBM, that means growth curves where (i.e., which pixel) they apply, and what is the leading species for that stand, an age raster, an ecozone raster, and information about disturbances (i.e., disturbance rasters) for all the years of simulation. Since we have that information for the province of Saskatchewan, we can change the definition of the study area in our `setupProject` script.
 
 ## Barebones script
 ```{r}
@@ -371,10 +394,31 @@ out <- SpaDES.project::setupProject(
       .useCache = TRUE
     )
   ),
+  functions = file.path(paths$modulePath, "CBM_core", "R", "ReticulateFindPython.R"),
 
   ret = {
-    reticulate::use_virtualenv(virtualenv = "r-reticulate")
-    reticulate::py_install("libcbm", envname = "r-reticulate")
+    reticulate::virtualenv_create(
+      "r-spadesCBM",
+      python = if (!reticulate::virtualenv_exists("r-spadesCBM")){
+        ReticulateFindPython(
+          version        = ">=3.9,<=3.12.7",
+          versionInstall = "3.10:latest",
+          pyenvRoot      = tools::R_user_dir("r-spadesCBM")
+        )
+      },
+      packages = c(
+        "numpy<2",
+        "pandas>=1.1.5",
+        "scipy",
+        "numexpr>=2.8.7",
+        "numba",
+        "pyyaml",
+        "mock",
+        "openpyxl",
+        "libcbm"
+      )
+    )
+    reticulate::use_virtualenv("r-spadesCBM")
   },
 
   #### begin manually passed inputs #########################################
@@ -408,7 +452,17 @@ out$loadOrder <- unlist(out$modules)
 
 # Run
 simPython <- do.call(SpaDES.core::simInitAndSpades, out)
-#INSERT ANY OTHER CODE HERE
-## e.g. the example to change the start or end time, and the one to change the masterRaster. 
+
+# Look at outputs
+outputs(simPython)
+
+# Explore the length of your simulation
+times(simPython)
+
+# Extend your simulation by changing the end time
+end(simPython) <- 2002
+
+# Resume the simulation
+simPython2 <- spades(simPython)
 
 ```
