Revert "Fixing references and minor text changes"
This reverts commit 1fccc3d89fc0c0917851009be53329b16e8f2b62.

--- a/training/references/references.bib
+++ b/training/references/references.bib
@@ -129,7 +129,7 @@ PMCID: PMC10441317}
 
 @article{kurz2009,
 	title = {CBM-CFS3: A model of carbon-dynamics in forestry and land-use change implementing IPCC standards},
-	author = {Kurz, W. A. and Dymond, C. C. and White, T. M. and Stinson, G. and Shaw, C. H. and Rampley, G. J. and Smyth, C. et al.},
+	author = {Kurz, W. A., C. C. Dymond, T. M. White, G. Stinson, C. H. Shaw, G. J. Rampley, C. Smyth, et al.},
 	year = {2009},
 	date = {2009},
 	journal = {Ecological Modelling},
@@ -140,7 +140,7 @@ PMCID: PMC10441317}
 
 @article{boisvenue2016,
 	title = {Improving carbon monitoring and reporting in forests using spatially-explicit information},
-	author = {Boisvenue, C. and Smiley, B. P. and White, J. C. and Kurz, W. A. and Wulder, M. A.},
+	author = {Boisvenue, {Céline}, Byron P. Smiley, Joanne C. White, Werner A. Kurz, and Michael A. Wulder},
 	year = {2016},
 	date = {2016},
 	journal = {Carbon Balance and Management},
