references and small corrections again

--- a/training/references/references.bib
+++ b/training/references/references.bib
@@ -151,7 +151,7 @@ PMCID: PMC10441317}
 
 @article{boisvenue2022,
 	title = {Managing forest carbon and landscape capacities},
-	author = {Boisvenue, {Céline}, and Paradis,Gregory and Eddy, Ian M S and McIntire, Eliot J B and Chubaty, Alex M},
+	author = {Boisvenue, C. and Paradis, G. and Eddy, I. M. S. and McIntire, E. J. B. and Chubaty, A. M.},
 	year = {2022},
 	date = {2022},
 	journal = {Environmental Research Letters},
