fixing functions = argument in setup of spadesCBM training chapter

--- a/training/spadesCBMDemo.qmd
+++ b/training/spadesCBMDemo.qmd
@@ -170,7 +170,7 @@ out <- SpaDES.project::setupProject(
       .useCache = TRUE
     )
   ),
-  functions = file.path(paths$modulePath, "CBM_core", "R", "ReticulateFindPython.R"),
+  functions = "PredictiveEcology/CBM_core@training/R/ReticulateFindPython.R",
 
   ret = {
     reticulate::virtualenv_create(
@@ -394,7 +394,7 @@ out <- SpaDES.project::setupProject(
       .useCache = TRUE
     )
   ),
-  functions = file.path(paths$modulePath, "CBM_core", "R", "ReticulateFindPython.R"),
+  functions = "PredictiveEcology/CBM_core@training/R/ReticulateFindPython.R",
 
   ret = {
     reticulate::virtualenv_create(
