--- a/workshops/Nov-2024-SpaDES-workshop.qmd
+++ b/workshops/Nov-2024-SpaDES-workshop.qmd
@@ -128,7 +128,13 @@ Presentation slides will be added at the end of each day.
 +-------------------------+--------------------------------------------------------------------------------------------------------------------------+
 | 12:30 - 1:30            | LUNCH BREAK                                                                                                              |
 +-------------------------+--------------------------------------------------------------------------------------------------------------------------+
-| 1:30 - 2:00             | [Forests and wildfire](https://predictiveecology.org/training/_book/ForestsAndFire.html)                                 |
+| 1:30 - 2:00             | [Forest carbon ](https://predictiveecology.org/training/_book/spadesCBMDemo.html)                                       |
 +-------------------------+--------------------------------------------------------------------------------------------------------------------------+
-| 2:00 - 4:00             | WOYO                                                                                                                     |
+|                         | [Download presentation](Presentations/2024-06-11/ForestCarbon.pdf)                                                  |
++-------------------------+--------------------------------------------------------------------------------------------------------------------------+
+| 2:00 - 2:30             | WOYO                                                                                                                     |
++-------------------------+--------------------------------------------------------------------------------------------------------------------------+
+| 2:30 - 3:00             | [Forests and wildfire](https://predictiveecology.org/training/_book/ForestsAndFire.html)                                 |
++-------------------------+--------------------------------------------------------------------------------------------------------------------------+
+| 3:00 - 4:00             | WOYO                                                                                                                     |
 +-------------------------+--------------------------------------------------------------------------------------------------------------------------+
